[gd_scene load_steps=5 format=3 uid="uid://dq2rptl6lv3tc"]

[ext_resource type="LabelSettings" uid="uid://c7d047estc02" path="res://resources/theme/label-settings-default.tres" id="1_8h5js"]
[ext_resource type="Script" path="res://scenes/UI/upgrade_slot.gd" id="1_dya2o"]
[ext_resource type="PackedScene" uid="uid://dqnb688fw4wpi" path="res://scenes/UI/price_container.tscn" id="1_o3l4u"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kn4dk"]

[node name="SlotContainer" type="MarginContainer"]
script = ExtResource("1_dya2o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
texture = SubResource("PlaceholderTexture2D_kn4dk")

[node name="UpgradeLabel" type="Label" parent="VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Placeholder"
label_settings = ExtResource("1_8h5js")
horizontal_alignment = 1

[node name="PriceContainer" parent="VBoxContainer" instance=ExtResource("1_o3l4u")]
layout_mode = 2
alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Panel" to="." method="_on_panel_mouse_exited"]
